--- a/recipes_finder/recipe/templates/home.html
+++ b/recipes_finder/recipe/templates/home.html
@@ -4,5 +4,7 @@
 <a href="http://127.0.0.1:8000/admin">ADMIN</a>
 <br>
 <a href="http://127.0.0.1:8000/list/">RECIPE LIST</a>
+<br>
+<a href="http://127.0.0.1:8000/account/login/">Login</a>
 {% endblock content %}
     
