--- a/recipes_finder/account/templates/registration/login.html
+++ b/recipes_finder/account/templates/registration/login.html
@@ -1,8 +1,10 @@
+{% extends "base.html" %}
+
 {% block content %}
-<h1>Logowanie</h1>
-<form action="." method="post">
-    {{ form.as_p }}
-    {% csrf_token %}
-    <p><input type="submit" value="Zaloguj"></p>
-</form>
+    <h1>Logowanie</h1>
+    <form action="." method="post">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <p><input type="submit" value="Zaloguj"></p>
+    </form>
 {% endblock content %}
