--- a/recipes_finder/account/templates/registration/logout.html
+++ b/recipes_finder/account/templates/registration/logout.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %}
+
 {% block content %}
-<h1>Wylogowanie</h1>
-<p>Zostales pomyslnie wylogowany</p>
+    <h1>Wylogowanie</h1>
+    <p>Zostales pomyslnie wylogowany</p>
 {% endblock content %}
