--- a/recipes_finder/recipe/templates/recipe/detail.html
+++ b/recipes_finder/recipe/templates/recipe/detail.html
@@ -1,9 +1,9 @@
-{% block content %}
+{% extends "base.html" %}
 
+{% block content %}
 <h2>
     <a href="{{ recipe.get_absolute_url }}">{{recipe.name}}</a>
 </h2>
     <p>Slug: {{ recipe.slug }}</p><br>
     <p>Opis: {{ recipe.description|linebreaks }}</p>
-
 {% endblock content %}
