--- a/recipes_finder/account/templates/registration/login.html
+++ b/recipes_finder/account/templates/registration/login.html
@@ -1,10 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Logowanie</h1>
-    <form action="." method="post">
-        {{ form.as_p }}
-        {% csrf_token %}
-        <p><input type="submit" value="Zaloguj"></p>
-    </form>
+<div class="container">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-4">
+            <h1>Logowanie</h1>
+            <form action="/account/login/" method="post">
+                {{ form.as_p }}
+                {% csrf_token %}
+                <p><input type="submit" value="Zaloguj"></p>
+            </form>
+        </div>
+        
+    </div>    
+</div>
 {% endblock content %}
