add: password change views

--- a/recipes_finder/account/templates/registration/logout.html
+++ b/recipes_finder/account/templates/registration/logout.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Wylogowanie</h1>
-    <p>Zostales pomyslnie wylogowany</p>
+    <p>You have been successfully logged out</p>
 {% endblock content %}
