--- a/recipes_finder/account/templates/registration/login.html
+++ b/recipes_finder/account/templates/registration/login.html
@@ -4,11 +4,11 @@
 <div class="container">
     <div class="row d-flex justify-content-center">
         <div class="col-md-4">
-            <h1>Logowanie</h1>
+            <h1>Login</h1>
             <form action="/account/login/" method="post">
                 {{ form.as_p }}
                 {% csrf_token %}
-                <p><input type="submit" value="Zaloguj"></p>
+                <p><input type="submit" value="Zaloguj"> <br> <a href="http://127.0.0.1:8000/account/password_reset/">Password reset</a></p>
             </form>
         </div>
         
