--- a/recipes_finder/recipe/templates/navbar.html
+++ b/recipes_finder/recipe/templates/navbar.html
@@ -32,7 +32,7 @@
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
+                        <a class="nav-link" href="{% url 'account:register' %}">Register</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'account:login' %}">Login</a>
