--- a/recipes_finder/recipe/templates/base.html
+++ b/recipes_finder/recipe/templates/base.html
@@ -17,10 +17,17 @@
     {% comment %} content {% endcomment %}      
     <div class="container">        
         <div class="row">
-            <div class="col-md-2 d-none d-md-block">
+            <div class="col-md-2 d-none d-md-block">                
                 {% block left_sidebar %}{% endblock left_sidebar %}
             </div>
-            <div class="col-xs-1 col-md-8 ">    
+            <div class="col-xs-1 col-md-8 ">
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class='alert alert-{{ message.tags }}'>
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}    
                 {% block content %}{% endblock content %}      
             </div>
             <div class="col-md-2">
