--- a/recipes_finder/account/templates/account/settings/email.html
+++ b/recipes_finder/account/templates/account/settings/email.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <form action="." method="post">
-        {{ form.as_p }}
+        {{ email_form.as_p }}
         <p><input type="submit" value="Change email"></p>
         {% csrf_token %}
     </form>
