--- a/recipes_finder/account/templates/account/settings/settings_left_bar.html
+++ b/recipes_finder/account/templates/account/settings/settings_left_bar.html
@@ -1,7 +1,7 @@
 <ul class="list-group list-group-flush">
-    <li class="list-group-item">Profile information</li>
-    <li class="list-group-item">Change password</li>
-    <li class="list-group-item">Change email</li>    
+    <li class="list-group-item"><a class="dropdown-item" href="{% url 'account:profile_info_change' %}">Profile information</a></li>
+    <li class="list-group-item"><a class="dropdown-item" href="{% url 'account:email_change' %}">Change email</a></li>
+    <li class="list-group-item"><a class="dropdown-item" href="{% url 'account:password_change' %}">Change password</a></li>    
     <li class="list-group-item">A fourth item</li>
     <li class="list-group-item">And a fifth one</li>
   </ul>
