--- a/recipes_finder/recipe/templates/navbar.html
+++ b/recipes_finder/recipe/templates/navbar.html
@@ -24,7 +24,7 @@
                             Profile
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="{% url 'account:profile_info_change' %}">Settings</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{% url 'account:logout' %}">Logout</a></li>
