--- a/recipes_finder/account/templates/account/settings/profile_info_change.html
+++ b/recipes_finder/account/templates/account/settings/profile_info_change.html
@@ -5,5 +5,10 @@
 {% endblock left_sidebar %}
 
 {% block content %}
-    
+    <form action="." method="post" enctype="multipart/form-data">
+        {{ user_form.as_p }}
+        {{ profile_form.as_p }}
+        <p><input type="submit" value="Save changes."></p>
+        {% csrf_token %}
+    </form>
 {% endblock content %}
