--- a/recipes_finder/recipe/templates/home.html
+++ b/recipes_finder/recipe/templates/home.html
@@ -9,7 +9,7 @@ Uzytkownik {{ user.get_username }}
 <br>
 <a href="http://127.0.0.1:8000/admin">ADMIN</a>
 <br>
-<a href="http://127.0.0.1:8000/list/">RECIPE LIST</a>
+<a href="{% url 'recipe:recipe_list' %}">RECIPE LIST</a>
 <br>
 <a href="http://127.0.0.1:8000/account/login/">Login</a>
 <br>
