--- a/recipes_finder/recipe/templates/home.html
+++ b/recipes_finder/recipe/templates/home.html
@@ -11,11 +11,11 @@ Uzytkownik {{ user.get_username }}
 <br>
 <a href="{% url 'recipe:recipe_list' %}">RECIPE LIST</a>
 <br>
-<a href="http://127.0.0.1:8000/account/login/">Login</a>
+<a href="{% url 'account:login' %}">Login</a>
 <br>
-<a href="http://127.0.0.1:8000/account/logout/">Logout</a>
+<a href="{% url 'account:logout' %}">Logout</a>
 <br>
-<a href="http://127.0.0.1:8000/account/password_reset/">Password reset</a>
+<a href="{% url 'account:password_reset' %}">Password reset</a>
 <br>
 <a href="{% url 'recipe:my_recipes' %}">My recipes</a>
 {% endblock content %}        
