--- a/recipes_finder/recipe/templates/my_recipes.html
+++ b/recipes_finder/recipe/templates/my_recipes.html
@@ -3,7 +3,7 @@
 {% block content %}
 <ul>
     {% for recipe in object_list %}
-        <li>{{ recipe.name }}</li>
+        <li><a href="{{ recipe.get_absolute_url }}update/">{{recipe.name}}</a></li>
     {% endfor %}
 </ul>
 {% endblock content %}
