--- a/recipes_finder/account/templates/registration/logout.html
+++ b/recipes_finder/account/templates/registration/logout.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-
+{% extends "3_col_base.html" %}
 {% block content %}
     <p>You have been successfully logged out</p>
 {% endblock content %}
