--- a/recipes_finder/account/templates/account/settings/password_change.html
+++ b/recipes_finder/account/templates/account/settings/password_change.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "3_col_base.html" %}
 
 {% block left_sidebar %}
     {% include "account/settings/settings_left_bar.html" %}
