--- a/recipes_finder/account/templates/registration/login.html
+++ b/recipes_finder/account/templates/registration/login.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-
+{% extends "3_col_base.html" %}
 {% block content %}
 <div class="container">
     <div class="row d-flex justify-content-center">
