--- a/recipes_finder/account/templates/registration/password_change_done.html
+++ b/recipes_finder/account/templates/registration/password_change_done.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-
+{% extends "3_col_base.html" %}
 {% block content %}
     <h1>The password has been changed.</h1>
     <p>Password change was successful.</p>
