--- a/recipes_finder/account/templates/registration/password_change_form.html
+++ b/recipes_finder/account/templates/registration/password_change_form.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-
+{% extends "3_col_base.html" %}
 {% block content %}
     <h1>Change password:</h1>
     <p>Fill out the form below to change your password.</p>
