--- a/recipes_finder/account/templates/registration/password_reset_form.html
+++ b/recipes_finder/account/templates/registration/password_reset_form.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-
+{% extends "3_col_base.html" %}
 {% block title %}Reset your password{% endblock %}
 
 {% block content %}
