--- a/recipes_finder/recipe/templates/navbar.html
+++ b/recipes_finder/recipe/templates/navbar.html
@@ -11,13 +11,24 @@
                             <a class="nav-link" href="{% url 'recipe:home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link" href="#">Features</a>
                         </li>
                         <li class="nav-item ">
-                        <a class="nav-link" href="#">Blog</a>
-                        </li>
-                    </ul>
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>        
+                        <li class="nav-item">
+                            <form action="/recipe/" method="get">                                
+                                <div class="input-group mb-3">                                
+                                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query">
+                                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                                    {% csrf_token %}
+                                </div> 
+                            </form>
+                        </li> 
+                        
+                    </ul>                      
                 <ul class="navbar-nav ms-auto ">
+                    
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
