--- a/recipes_finder/recipe/templates/recipe/my_recipes.html
+++ b/recipes_finder/recipe/templates/recipe/my_recipes.html
@@ -1,9 +1,30 @@
 {% extends "1_col_base.html" %}
+{% load static %}
+{% load thumbnail %}
 
 {% block content %}
-<ul>
-    {% for recipe in object_list %}
-        <li><a href="{{ recipe.get_absolute_url }}update/">{{recipe.name}}</a></li>
-    {% endfor %}
-</ul>
+<div class="table-responsive">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Img</th>
+                <th scope="col">Name</th>
+                <th scope="col">Description</th>
+                <th scope="col">Created</th>
+                <th scope="col">Edit</th>
+            </tr>
+        </thead>
+{% for recipe in object_list %}
+        <tbody>
+            <tr>
+                <th scope="row"><img src="{% thumbnail recipe.image 100x0 %}"></th>
+                <td><a href="{{ recipe.get_absolute_url }}">{{ recipe.name }}</a></td>
+                <td>{{ recipe.description }}</td>
+                <td>{{ recipe.created|timesince }} ago</td>
+                <td><button> <a href="{{ recipe.get_absolute_url }}update/">Edit</a></button></td>
+            </tr>
+{% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock content %}
