--- a/recipes_finder/recipe/templates/1_col_base.html
+++ b/recipes_finder/recipe/templates/1_col_base.html
@@ -4,13 +4,7 @@
 <div class="container">        
     <div class="row">        
         <div class="col">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class='alert alert-{{ message.tags }}'>
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}    
+            {% include 'messages.html' %}  
             {% block content %}{% endblock content %}      
         </div>         
     </div>
