--- a/recipes_finder/recipe/templates/2_col_base.html
+++ b/recipes_finder/recipe/templates/2_col_base.html
@@ -4,13 +4,7 @@
 <div class="container">  
     <div class="row">
         <div class="col-xs-1 col-md-8 ">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class='alert alert-{{ message.tags }}'>
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}    
+            {% include 'messages.html' %}   
             {% block content %}{% endblock content %}      
         </div>
         <div class="col-md-4">
